--- a/Day20/Day20.ipynb
+++ b/Day20/Day20.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "a9ee00fa-7910-4dff-9470-04021b0f16b3",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "3998b42f-e6a2-4fcf-af67-0da0cfac0f8d",
    "metadata": {},
    "outputs": [],
@@ -33,18 +33,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "id": "da5c17b3-477b-4f2c-a51b-b526a14f95f9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "420\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def sorter(p):\n",
     "    return abs(p[7]) + abs(p[8]) + abs(p[9])\n",
@@ -91,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "id": "02f1ce99-6ff6-4230-acc0-c841156b0b96",
    "metadata": {},
    "outputs": [
@@ -115,19 +107,12 @@
       "Test case\n",
       "---------\n",
       "\n",
-      "1\n",
-      "None particles remain\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[58], line 19\u001b[0m\n\u001b[1;32m     15\u001b[0m res \u001b[38;5;241m=\u001b[39m eliminate(read_input(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minput20a.txt\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mres\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m particles remain\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 19\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m res \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mPuzzle case\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m-----------\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     23\u001b[0m res \u001b[38;5;241m=\u001b[39m eliminate(read_input(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minput20.txt\u001b[39m\u001b[38;5;124m'\u001b[39m))\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
+      "1 particles remain\n",
+      "\n",
+      "Puzzle case\n",
+      "-----------\n",
+      "\n",
+      "420 particles remain\n"
      ]
     }
    ],
@@ -159,110 +144,6 @@
     "print(f'{res} particles remain')\n",
     "\n",
     "assert res == 420\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "478feba0-3d74-4ece-85c6-781180f497c6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "3*2 -6"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "abf75deb-d019-4f7e-a207-0d4c4bb5e651",
-   "metadata": {},
-   "source": [
-    "x2 + v2*t + 0.5*a2*t**2 = x1 + v1*t + 0.5*a1*t**2\n",
-    "0.5*a1*t**2 - 0.5*a2*t**2 = x2 - x1 + v2*t - v1*t\n",
-    "t**2*0.5*(a1-a2) = t*(v2-v1)\n",
-    "t = 2* (v2-v1) / (a1-a2)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e917e0d-4b3c-4d1a-9b81-409002900aa3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "2* (2-3) / "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bd575121-d73c-4dba-a4bd-45ba88d4c1e9",
-   "metadata": {},
-   "source": [
-    "(x2-x1) + (v2-v1)*t + 0.5*(a2-a1)*t**2 = 0\n",
-    "(-(v2-v1) +- sqrt((v2-v1)**2-2*(a2-a1)*(x2-x1))) / 2*(a2-a1) = t\n",
-    "\n",
-    "x2+v2*t = x1+v1*t\n",
-    "(x2-x1) = (v1-v2)*t\n",
-    "(x2-x1)/(v1-v2) = t"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "3893c3e7-ca43-42ac-854b-bf299aca85b0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.0"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(-4+6)/(3-2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "e8b8f27a-e3ad-4df4-a92e-059550f10604",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1 1 1]\n",
-      " [2 2 2]]\n",
-      "[[3 4 5]\n",
-      " [6 7 8]]\n",
-      "[[ 4  5  6]\n",
-      " [ 8  9 10]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = np.array([[1,1,1], [2,2,2]], dtype=int)\n",
-    "b = np.array([[3,4,5], [6,7,8]], dtype=int)\n",
-    "\n",
-    "print(a)\n",
-    "print(b)\n",
-    "print(a+b)"
    ]
   },
   {
